# course

./: README.md  VM_Setup_FAQ.md  faq.md  git_faq.md  grading.md  retaking_the_course.md  syllabus.md
debug-notes/: cme212-debug.md
debug-notes/src/: containers_gdb.cpp  debug_macro.cpp  print.cpp
notes/: defaults.mk
notes/lecture-01/: debugging.md  proxy.md
notes/lecture-02/: debugging.md
notes/lecture-03/: make.md  proxy.md  specifications.md
notes/lecture-03/src/student/: CMakeLists.txt  Name.hpp  Student.cpp  flat.mk  libs.mk  makefile.libs  makefile.macros  makefile.modular  makefile.variables
notes/lecture-05/: abstractions.md  loop_invariants.md
notes/lecture-06/: specifications.md
problem_bank/: coin_change.cpp  count_substrings_with_only_one_distinct_letter.cpp  diet_plan_performance.cpp  find_k-length_substrings_with_no_repeated_characters.cpp  intersection_three_sorted_arrays.cpp  intersection_two_arrays.cpp  invert_binary_tree.cpp  is_subsequence.cpp  last_stone_weight.cpp  longest_increasing_subsequence.cpp  longest_substring_without_repeating_characters.cpp  max_consecutive_ones_iii.cpp  maximum_subarray.cpp  merge_two_binary_trees.cpp  minimum_swaps_to_group_all_1s_together.cpp  nary_tree_postorder_traversal.cpp  nary_tree_preorder_traversal.cpp  nested_list_weight_sum.cpp  next_greater_element_i.cpp  palindromic_substrings.cpp  play_with_chips.cpp  range_sum_of_bst.cpp  remove_outermost_parentheses.cpp  reverse_linked_list.cpp  sort_array_by_parity.cpp  sort_array_by_parity_ii.cpp  split_a_string_in_balanced_strings.cpp  two_sum.cpp
(+109 files in other folders)
